# CompSci-Semantic-Search-Agent

./: README.md
semantic_search/: pyproject.toml
semantic_search/src/semantic_search/: handle_queries.py  ingestion_and_indexing.py  load_documents.py  main.py
semantic_search/src/semantic_search/old/: add_embeddings.py  create_search_index.py  handle_queries.py
